Simplified code in community create-post. Reduced bottom-margin of aq-sub-toolbar to 0px.

--- a/src/components/common/aq-sub-toolbar.html
+++ b/src/components/common/aq-sub-toolbar.html
@@ -12,7 +12,7 @@
             .toolbar {
                 height: var(--toolbar-height,42px);
                 width: 100%;
-                margin-bottom: 5px;
+                --margin-bottom: 5px;
                 margin-top:0px;
                 background-color: #e9e9e9;
                 box-shadow:0 4px 8px rgba(0,0,0,0.2);
