Code Cleanup. Removed console outputs

--- a/src/components/analyze/aq-analyze-home-menu.html
+++ b/src/components/analyze/aq-analyze-home-menu.html
@@ -120,7 +120,7 @@
                             on-change='onCheckAllBacktest'>
             </paper-checkbox>
 
-            <p class="self-center flex">All Backtests</p>
+            <p class="self-center flex">All Backtests for <i>[[strategyName]]</i></p>
 
             <div id='menu-icons'>
 
