--- a/src/components/analyze/aq-analyze-home.html
+++ b/src/components/analyze/aq-analyze-home.html
@@ -5,6 +5,8 @@
 <link rel='import' href='../../../bower_components/iron-signals/iron-signals.html'>
 <link rel='import' href='../../../bower_components/paper-icon-button/paper-icon-button.html'>
 <link rel='import' href='../../../bower_components/paper-header-panel/paper-header-panel.html'>
+<link rel="import" href="../../../bower_components/iron-lazy-pages/iron-lazy-pages.html">
+<link rel="import" href="../../../bower_components/iron-lazy-pages/iron-lazy-page.html">
 
 <link rel='import' href='../common/aq-check-authentication.html'>
 <link rel="import" href="../common/aq-loading-progress.html">
@@ -109,48 +111,45 @@
 		
 		<aq-loading-progress loading='{{isLoading(strategyLoading, backtestLoading)}}'></aq-loading-progress>
 
-		<div class="fit"> 
-	        <paper-header-panel fixed mode="seamed">
-		        <template is="dom-if" if="[[!showComparison]]">
-			        <aq-analyze-home-menu
-			        	check-all="{{checkAll}}"
-			        	num-active-backtests="[[checkedCount]]"
-		              	strategy-name="{{strategyName}}"
-		              	class="paper-header">
-		          	</aq-analyze-home-menu>
-		        </template>
+		<iron-lazy-pages attr-for-selected="page" selected="{{computeSelectedPage(showComparison)}}" fallback-selection="home">
+         
+	        <template is='iron-lazy-page' page="home">
+				<div class="fit"> 
+		        	<paper-header-panel fixed mode="seamed">
+			            <aq-analyze-home-menu
+				        	check-all="{{checkAll}}"
+				        	num-active-backtests="[[checkedItems.length]]"
+			              	strategy-name="{{strategyName}}"
+			              	class="paper-header">
+			          	</aq-analyze-home-menu>
 
-		        <template is='dom-if' if='{{!isLoading(strategyLoading, backtestLoading)}}'>
-					<div id='container'>
-
-						<template is='dom-if' if="[[!showComparison]]">
-							<!--paper-button noink id='backButton' class="self-center" title="Go Back" on-tap='goToEditor'><iron-icon icon="chevron-left" ></iron-icon> Back</paper-button-->
-
-							<div class="layout vertical center">
-
+				        <template is='dom-if' if='{{!isLoading(strategyLoading, backtestLoading)}}'>
+							<div id='container'>
+								<div class="layout vertical center">
 								<template is='dom-repeat' items="{{backtests}}" initial-count=10>
-									<aq-analyze-home-backtest-item2  class="backtest-item"  index="{{index}}" backtest="{{item}}" detail-icon=1 share-icon=1></aq-analyze-home-backtest-item2>
+									<aq-analyze-home-backtest-item2  class="backtest-item" index="{{index}}" backtest="{{item}}" detail-icon share-icon></aq-analyze-home-backtest-item2>
 								</template>
 
 								<template is='dom-if' if='[[isBacktestCountOdd(backtests)]]'>
 									<div class="spacer"></div>
 								</template>
+								</div>
 
 							</div>
 						</template>
-					</div>
-				</template>
-			</paper-header-panel>
+					</paper-header-panel>
+				</div>
+			</template>
 
-			<template is='dom-if' if="[[showComparison]]">
-				<aq-analyze-backtest-comparison-item strategy-name="{{strategyName}}" compare-items="[[checkedItems]]" index-array="[[getIndexArray(checkedItems)]]" active="[[showComparison]]">
+			<template is='iron-lazy-page' page="comparison">
+				<aq-analyze-backtest-comparison-item strategy-name="{{strategyName}}" compare-items="[[checkedItems]]" active="[[showComparison]]">
 				</aq-analyze-backtest-comparison-item>
 			</template>
 
-		</div>
-
+		</iron-lazy-pages>
+		
 	    <aq-delete-dialog id ="deleteDialog" heading="Delete Backtests"
-			 message="Are you sure to delete [[checkedCount]] backtest[[getMessageSuffix(checkedCount)]]?"
+			 message="Are you sure to delete [[checkedItems.length]] backtest[[getMessageSuffix(checkedItems)]]?"
 			 cancel="Cancel"
 			 accept="OK">
     	</aq-delete-dialog>
@@ -182,13 +181,14 @@
     			},
 
     			checkedItems: {
-					type:Object,
-					value:{},
+					type:Array,
+					value:[],
 				},
 
 				showComparison :{
 					type:Boolean,
 					value:false,
+					observer:'_showComparisonChanged',
 				},
 
 				routeData: {
@@ -226,6 +226,7 @@
 				    type:Boolean,
                     value:false
                 },
+
 				indexArray:{
                 	type:Array,
 					value:[]
@@ -249,9 +250,8 @@
             },
 
             resetView: function() {
-	        	this.showComparison = false;
-	        	this.checkedCount = 0;
-	        	this.checkedItems = {};
+	        	//this.showComparison = false;
+	        	this.checkedItems = [];
                 this.checkAll = false;
 	        },
 
@@ -336,38 +336,31 @@
 
 			checkBacktest: function(e) {
 				var checked = e.detail.checked;
-	        	this.checkedItems[e.detail.id] = {checked: e.detail.checked, index: e.detail.index};
+	        	//this.checkedItems[e.detail.id] = {checked: e.detail.checked, index: e.detail.index};
 
+	        	var checkedId  = e.detail.id;
+	        	var checkedIndex = e.detail.index;
 	        	if (checked == true) {
-	        		this.checkedCount += 1;
-                    if(this.indexArray.indexOf(e.detail.index) == -1)
-                        this.push('indexArray',e.detail.index);
+	        		
+                    if(this.checkedItems.map(x => x.id).indexOf(checkedId) == -1) {
+                        this.push('checkedItems', {id: checkedId, index: checkedIndex});
+                        //this.checkedCount += 1;
+                    }
 	        	} else {
-	        		this.checkedCount -= 1;
-                    this.splice('indexArray',this.indexArray.indexOf(e.detail.index),1);
+                    this.splice('checkedItems',this.checkedItems.map(x => x.id).indexOf(checkedId),1);
+                    //this.checkedCount -= 1;
 	        	}
 	        	
-	        	if(this.checkedCount > this.backtests.length)
-	        	    this.checkedCount = this.backtests.length;
-	        	
-	        	this.checkAll = this.checkedCount == this.backtests.length;
+	        	this.checkAll = this.checkedItems.length == this.backtests.length;
+
 	        },
 
-	        getIndexArray: function(checkedItems) {
-	        	var indexArray = new Array();
-	        	for (var key in checkedItems) {
-	        		indexArray.push(checkedItems[key].index);
-	        	}
-
-	        	return indexArray;
+	        numCheckedBacktests: function(checkedItems) {
+	        	return checkedItems.length;
 	        },
 
-	        numCheckedBacktests: function(checkedCount) {
-	        	return checkedCount;
-	        },
-
-	        getMessageSuffix: function(checkedCount) {
-        		return checkedCount > 1 ? "s" :"";
+	        getMessageSuffix: function(checkedItems) {
+        		return this.numCheckedBacktests(checkedItems) > 1 ? "s" :"";
         	},
 
 	        openDeleteDialog: function() {
@@ -377,10 +370,10 @@
 	        onDeletion: function(e) {
 	        	e.stopPropagation();
 	        	//Send DELETE request to backend
-	        	for (key in this.checkedItems) {
-	        		var idx = this.backtests.map(function(x) {return x._id;}).indexOf(key);
-	        		if(idx != -1 && this.checkedItems[key].checked == true) {
-	        			this.deleteId = key;
+	        	for (var item of this.checkedItems) {
+	        		var idx = this.backtests.map(function(x) {return x._id;}).indexOf(item.id);
+	        		if(idx != -1) {
+	        			this.deleteId = item.id;
         				this.$.deleteBacktestQuery.generateRequest();
 	        		}
         		}
@@ -395,9 +388,9 @@
 
 	        	if(idx != -1) {
 	        		this.splice('backtests', idx, 1);
-	        		console.log(this.backtests);
-    				this.checkedCount -= 1;
-    				delete this.checkedItems[deleteId];
+    				
+    				this.splice('checkedItems', this.checkedItems.map(x=>x.id).indexOf(deleteId), 1);
+
     				this.fire('iron-signal', {name:'backtest-deleted'});
 	        	}
 
@@ -433,8 +426,19 @@
 	        isLoading: function(strategyLoading, backtestLoading) {
 	        	return strategyLoading || backtestLoading;
 	        },
+
 			selectAllBacktest:function (e) {
 
+			},
+
+			computeSelectedPage: function(showComparison) {
+		 		return showComparison ? "comparison" : "home";
+			},
+
+			_showComparisonChanged: function() {
+				if(!this.showComparison) {
+					this.resetView();
+				}
 			}
 
     	});
