--- a/src/components/common/aq-backtest-summary-element.html
+++ b/src/components/common/aq-backtest-summary-element.html
@@ -1,12 +1,15 @@
 <link rel="import" href="../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html">
 <link rel="import" href="../../../bower_components/vaadin-grid/vaadin-grid.html">
-<link rel="import" href="../../../bower_components/vaadin-grid/vaadin-grid.min.js">
 <link rel="import" href="../../../bower_components/iron-ajax/iron-ajax.html">
 <link rel="import" href="../../../bower_components/paper-radio-button/paper-radio-button.html">
 <link rel="import" href="../../../bower_components/paper-radio-group/paper-radio-group.html">
 <link rel="import" href="../../../bower_components/iron-selector/iron-selector.html">
 <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
-<dom-module id="aq-code-summary-element">
+
+<link rel='import' href='./aq-check-authentication.html'>
+<link rel='import' href='./aq-loading-progress.html'>
+
+<dom-module id="aq-backtest-summary-element">
 
     <template>
 
@@ -14,10 +17,6 @@
             :host {
                 font-family: 'Lato', sans-serif;
                 font-size: 14px;
-            }
-
-            .container {
-
             }
 
             .time-period {
@@ -39,8 +38,9 @@
                 font-size: 14px;
             }
 
-            .calendar-container {
+            #calendar-container {
                 margin-top: 7px;
+                transition: all 0.3s ease-in-out;
             }
 
             paper-radio-button {
@@ -58,6 +58,7 @@
             }
             .upper-container{
                 margin-bottom: 20px;
+                margin-left: 20px;
             }
             vaadin-grid {
                 --primary-color: transparent;
@@ -67,39 +68,60 @@
                 color:#000;
                 font-weight: 700;
             }
-            #calendar-container{
-                transition: all 0.3s ease-in-out;
+            .container {
+                margin-top: 30px;
+                margin-bottom: 10px;
             }
+          
         </style>
+
+        <aq-check-authentication id='authItem'></aq-check-authentication>
+
+        <iron-ajax
+            url="[[computeGetBacktestUrl(backtestId)]]"
+            method='GET'
+            id='getBacktestsQuery'
+            handle-as="json"
+            on-response="onGetBacktestSuccess"
+            on-error="onGetBacktestError"
+            headers='{{header}}'
+            debounce-duration="300">
+        </iron-ajax>
+
         <div class="container layout vertical flex">
             <div class="upper-container layout horizontal">
                 <div class="checkbox-container layout horizontal center-justified">
                     <span class="time-period">Time Period</span>
-                    <paper-radio-group selected="0">
+                    <paper-radio-group selected="{{selectedButton}}" fallback-selection="0">
                         <paper-radio-button noink name="0">All</paper-radio-button>
                         <paper-radio-button noink name="1">Last 252 Days</paper-radio-button>
                         <paper-radio-button noink name="2">Custom</paper-radio-button>
                     </paper-radio-group>
                 </div>
-                <div id="calendar-container" class="calendar-container layout vertical flex">
-                    <div class="calendar-item-container year-container layout horizontal">
-                        <iron-selector attr-for-selected="year" class="layout horizontal" selected="2002">
-                            <template is="dom-repeat" items="{{years}}">
-                                <div year="{{item}}" class="calendar-item"><span>{{item}}</span></div>
-                            </template>
-                        </iron-selector>
-                    </div>
+                
+                <template is='dom-if' if='[[isCustomBar(selectedButton)]]'>
+                    <div id="calendar-container" class="layout vertical flex">
+                        <div class="calendar-item-container year-container layout horizontal">
+                            <iron-selector attr-for-selected="year" class="layout horizontal" selected="2002">
+                                <template is="dom-repeat" items="{{years}}">
+                                    <div year="{{item}}" class="calendar-item"><span>{{item}}</span></div>
+                                </template>
+                            </iron-selector>
+                        </div>
 
-                    <div class="calendar-item-container month-container layout horizontal">
-                        <iron-selector attr-for-selected="month" selected="Jan" class="layout horizontal">
-                            <template is="dom-repeat" items="{{months}}">
-                                <div month="{{item}}" class="calendar-item"><span>{{item}}</span></div>
-                            </template>
-                        </iron-selector>
+                        <div class="calendar-item-container month-container layout horizontal">
+                            <iron-selector attr-for-selected="month" selected="Jan" class="layout horizontal">
+                                <template is="dom-repeat" items="{{months}}">
+                                    <div month="{{item}}" class="calendar-item"><span>{{item}}</span></div>
+                                </template>
+                            </iron-selector>
+                        </div>
                     </div>
-                </div>
+                </template>
             </div>
-            <span>Showing Data from <span class="heavy-span">September 2002</span></span>
+
+            <span style="margin-left: 20px;">Showing Data from <span class="heavy-span">September 2002</span></span>
+
             <vaadin-grid>
                 <table>
                     <colgroup>
@@ -120,9 +142,10 @@
             </vaadin-grid>
         </div>
     </template>
+    
     <script>
         Polymer({
-            is: "aq-code-summary-element",
+            is: "aq-backtest-summary-element",
             properties: {
                 data: {
                     type: Array,
@@ -147,39 +170,29 @@
                     type: Array,
                     value: ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec']
                 },
-                backtestIndexArray:{
-                    type:Array,
-                    value:[]
+
+                compareItems: {
+                    type: Array,
+                    observer:'_compareItemsChanged'
                 },
-                backtests:{
-                    type:Array,
-                    value:[]
+
+                selectedButton: {
+                    type:String,
+                },
+
+            },
+
+            _compareItemsChanged: function() {
+                this.selectedButton = "0";
+
+                if(this.compareItems.length > 0) {
+                    this.compare();
                 }
             },
-            ready: function () {
-                var element = this;
-                var paperRadioGroup = this.$$('paper-radio-group');
-                paperRadioGroup.addEventListener('iron-select', function () {
-                    if(paperRadioGroup.selected == "2"){
-                        element.$$('#calendar-container').style.transform = "translate(0,0)";
-                    }else{
-                        element.$$('#calendar-container').style.transform = "translate(0,-150px)";
-                    }
-                });
-            },
-            init:function (backtestResponseArray) {
-                var grid = this.$$('vaadin-grid');
-                this.backtests = backtestResponseArray;
-                var element = this;
-                this.data = this.getBacktestData(this.backtestIndexArray,this.backtests);
-                grid.items = function (params, callback) {
-                    callback(element.data.slice(params.index, params.index + params.count));
-                };
-                grid.size = this.data.length;
-            },
-            getBacktestData:function (indexArray,backtests) {
+
+            getBacktestData: function(indexArray, backtests) {
                 var result = [];
-                for(var i=0 ;i<backtests.length;i++){
+                for(var i=0; i<backtests.length; i++){
                     result.push([
                             indexArray[i],
                         backtests[i].output.summary.totalreturn+'%',
@@ -194,9 +207,35 @@
                         backtests[i].output.summary.alpha
                     ]);
                 }
-                console.log(result);
                 return result;
-            }
-        })
+            },
+
+            compare: function() {
+
+                var grid = this.$$('vaadin-grid');
+                var element = this;
+
+                var indexArray = this.compareItems.map(x=>x.index);
+                var backtests = this.compareItems.map(x=>x.backtest);
+
+                this.data = this.getBacktestData(indexArray, backtests);
+                
+                grid.items = function (params, callback) {
+                    callback(element.data.slice(params.index, params.index + params.count));
+                };
+                grid.size = this.data.length;
+
+            },
+
+            computeGetBacktestUrl: function (backtestId) {
+                var APIEndPoint = new Polymer.IronMetaQuery({key: 'APIEndPoint'}).value;
+                return APIEndPoint + '/backtest/' + backtestId;
+            },
+
+            isCustomBar: function(selectedButton) {
+                return selectedButton == "2";
+            },
+
+        });
     </script>
 </dom-module>
