--- a/src/components/editor/aq-editor-edit-programmer.html
+++ b/src/components/editor/aq-editor-edit-programmer.html
@@ -96,8 +96,8 @@
 
         this.async(
           function(){
-            //this.$.codeEditor.editor.gotoLine(1);
-            //this.$.codeEditor.editor.focus();
+            this.$.codeEditor.editor.gotoLine(1);
+            this.$.codeEditor.editor.focus();
           }, tgap + 20);
       },
 
